  values from a ResultSet and PreparedStatement_setTimestamp for setting
  Unix timestamp.
* New: ResultSet_isnull, can be used to explicit test if a column
  value in a Result Set is SQL null. A Result Set already returns
  the NULL pointer for string and blob types and 0 for primitive data
  types, but to differ between SQL null and the value NULL or 0, this 
  method can be used.
* New: It is now a checked runtime error for the url parameter given 
  in ConnectionPool_new() to be NULL.
* New: No longer require flex installed as the generated file is
  part of the dist.
* Fixes: Oracle: Fixed a memory corruption in OracleResultSet
  https://github.com/tildeslash/libzdb/issues/4

Version 2.12
--------------
* New: PreparedStatement_rowsChanged added to PreparedStatement.h
* Fixes: Oracle: OCIPing is used to check oracle connection and
  ensure that the Pool returns connected connections. Thanks to
  Pavlo Lavrenenko.

Version 2.11.3
--------------
* New: License exception added to allow for linking and 
  distributing this Software together with OpenSSL.

Version 2.11.2
--------------
* New: Throw SQLException if a database access error occurs
  when ResultSet_next() is called. Previously, access errors
  could be masked as end of result set. Thanks to JiaQiang Xu.
* Fixes: Possible mem leak in Oracle's blob operation fixed 
  (Volodymyr Tarasenko)

Version 2.11.1
--------------
* Fixes: MySQL: Fixed a ResultSet bind memory error which could occur
  if string or blob columns of different size caused successive buffer
  reallocation. Thanks to Ryan Addams for discovering the problem.

Version 2.11
------------
* New: Added support for the new bytea hex encoding format
  introduced in PostgreSQL 9.0.
* Fixes: MySQL: A table with two or more columns larger than 256
  bytes would cause libzdb to truncate the second column to 256 
  bytes in the first row. Thanks to Me from China for bug report
  and patch.
* Fixes: Using configure flags --with-xxx without arguments