@@ -30,6 +30,7 @@ void MysqlPreparedStatement_setString(T P, int parameterIndex, const char *x);
 void MysqlPreparedStatement_setInt(T P, int parameterIndex, int x);
 void MysqlPreparedStatement_setLLong(T P, int parameterIndex, long long x);
 void MysqlPreparedStatement_setDouble(T P, int parameterIndex, double x);
+void MysqlPreparedStatement_setTimestamp(T P, int parameterIndex, time_t x);
 void MysqlPreparedStatement_setBlob(T P, int parameterIndex, const void *x, int size);
 void MysqlPreparedStatement_execute(T P);
 ResultSet_T MysqlPreparedStatement_executeQuery(T P);
