@@ -12,6 +12,8 @@ Version 2.14
   the NULL pointer for string and blob types and 0 for primitive data
   types, but to differ between SQL null and the value NULL or 0, this 
   method can be used.
+* New: PreparedStatement_getParameterCount, Returns the number of 
+  parameters in a prepared statement
 * New: It is now a checked runtime error for the url parameter given 
   in ConnectionPool_new() to be NULL.
 * New: No longer require flex installed as the generated file is
